// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`parse-path should parse and stringify path expectedly: #utils/helper 1`] = `
{
  "hash": "",
  "pathname": "#utils/helper",
  "query": "",
}
`;

exports[`parse-path should parse and stringify path expectedly: #utils/helper.js 1`] = `
{
  "hash": "",
  "pathname": "#utils/helper.js",
  "query": "",
}
`;

exports[`parse-path should parse and stringify path expectedly: #utils/helper.js?query 1`] = `
{
  "hash": "",
  "pathname": "#utils/helper.js",
  "query": "?query",
}
`;

exports[`parse-path should parse and stringify path expectedly: #utils/helper?query 1`] = `
{
  "hash": "",
  "pathname": "#utils/helper",
  "query": "?query",
}
`;

exports[`parse-path should parse and stringify path expectedly: foo 1`] = `
{
  "hash": "",
  "pathname": "foo",
  "query": "",
}
`;

exports[`parse-path should parse and stringify path expectedly: foo#hash 1`] = `
{
  "hash": "#hash",
  "pathname": "foo",
  "query": "",
}
`;

exports[`parse-path should parse and stringify path expectedly: foo#hash?query 1`] = `
{
  "hash": "#hash?query",
  "pathname": "foo",
  "query": "",
}
`;

exports[`parse-path should parse and stringify path expectedly: foo?query 1`] = `
{
  "hash": "",
  "pathname": "foo",
  "query": "?query",
}
`;

exports[`parse-path should parse and stringify path expectedly: foo?query#hash 1`] = `
{
  "hash": "#hash",
  "pathname": "foo",
  "query": "?query",
}
`;
